--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -141,64 +141,70 @@ deploy_prod:
 
 secure_prod:
   stage: deploy_prod
-  image: docker:latest
-  services:
-    - docker:dind
+  tags: 
+    - traefik-fastapi-project       # a shell runner to run this job
   before_script:
-    # - mkdir -p traefik/letsencrypt
-    # - touch traefik/letsencrypt/acme.json
-    # - chmod 600 traefik/letsencrypt/acme.json
-    # adding treafik certificate folder
     - echo "Preparing Traefik certificate folder..."
     - mkdir -p /home/gitlab-runner/traefik-public-certificates
+    - chown -R gitlab-runner:gitlab-runner /home/gitlab-runner/traefik-public-certificates
     - touch /home/gitlab-runner/traefik-public-certificates/acme.json
     - chmod 700 /home/gitlab-runner/traefik-public-certificates
     - chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
-    - apk add --no-cache curl bash
-    - docker-compose -f docker-compose.prod.yml down
   script:
-    - echo "Securing Production with HTTPS..."
-    - |
-      cat > docker-compose.override.yml <<'EOF'
-      services:
-        web:
-          labels:
-            - "traefik.enable=true"
-            - "traefik.http.routers.web.rule=Host(`fastapi-traefik.prod-fastapi.ddns-ip.net`)"
-            - "traefik.http.routers.web.entrypoints=websecure"
-            - "traefik.http.routers.web.tls.certresolver=letsencrypt"
-            - "traefik.http.routers.web.middlewares=secure-headers"
-            - "traefik.http.routers.web-secure-redirect.entrypoints=web"
-            - "traefik.http.routers.web-secure-redirect.rule=Host(`fastapi-traefik.prod-fastapi.ddns-ip.net`)"
-            - "traefik.http.routers.web-secure-redirect.middlewares=redirect-to-https"
-            - "traefik.http.services.web.loadbalancer.server.port=80"
-      EOF
-    - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build 
-    # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
-    - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
+    - docker-compose -f docker-compose.prod.yml down
+    - sudo apt-get update && sudo apt-get install -y bash curl coreutils ufw certbot
+    - sudo certbot certonly --standalone -d fastapi-traefik.prod-fastapi.ddns-ip.net --non-interactive --agree-tos --email tsamosarial@yahoo.fr
+    - sudo test -f /etc/letsencrypt/live/fastapi-traefik.prod-fastapi.ddns-ip.net/fullchain.pem || (echo "Certificate file not found!" && exit 1)
+    - sudo openssl x509 -in /etc/letsencrypt/live/fastapi-traefik.prod-fastapi.ddns-ip.net/fullchain.pem -noout -issuer -subject -dates
+    - sudo cp /etc/letsencrypt/live/fastapi-traefik.prod-fastapi.ddns-ip.net/fullchain.pem /home/gitlab-runner/traefik-public-certificates/
+    - sudo cp /etc/letsencrypt/live/fastapi-traefik.prod-fastapi.ddns-ip.net/privkey.pem /home/gitlab-runner/traefik-public-certificates/
+    - sudo chmod 600 /home/gitlab-runner/traefik-public-certificates/*.pem
+    - docker-compose -f docker-compose.prod.yml up -d --build
     - docker ps -a
     - sleep 20
-    - docker-compose restart traefik
-    - docker-compose restart web
-    - docker-compose restart db
-    - sleep 20
-    - docker-compose ps
-    - docker-compose logs traefik
-    - docker-compose logs db
-    - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml config > /tmp/merged.yml
-    - cat /tmp/merged.yml
-    - docker-compose logs traefik | grep acme
-    - echo "Test FastAPI inside the container..."
-    - docker-compose exec -T web curl -f http://web:80/ || (echo "Internal health check failed!" && exit 1)
-    - docker-compose exec -it web curl -vk http://web:80/docs || (echo "Internal docs endpoint check failed!" && exit 1)
-    - echo "Checking HTTPS..."
-    - openssl s_client -connect fastapi-traefik.prod-fastapi.ip-ddns.com:443 -servername fastapi-traefik.prod-fastapi.ddns-ip.net | openssl x509 -noout -issuer -subject -dates
-    - curl -vk http://fastapi-traefik.prod-fastapi.ddns-ip.net/.well-known/acme-challenge/test
-    - curl -vk https://fastapi-traefik.prod-fastapi.ddns-ip.net/docs || (echo "HTTPS check failed!" && exit 1)
-    - curl -vkI https://fastapi-traefik.prod-fastapi.ddns-ip.net/docs
-    - curl -vk https://fastapi-traefik.prod-fastapi.ddns-ip.net 2>&1 | grep "issuer"
-    - curl -vkI https://fastapi-traefik.prod-fastapi.ddns-ip.net
-    - echo "HTTPS enabled and secure headers applied!"
+    - curl -vk https://fastapi-traefik.prod-fastapi.ddns-ip.net --max-time 30 || (echo "HTTPS check failed!" && exit 1)
+    # - echo "Securing Production with HTTPS..."
+    # - |
+    #   cat > docker-compose.override.yml <<'EOF'
+    #   services:
+    #     web:
+    #       labels:
+    #         - "traefik.enable=true"
+    #         - "traefik.http.routers.web.rule=Host(`fastapi-traefik.prod-fastapi.ddns-ip.net`)"
+    #         - "traefik.http.routers.web.entrypoints=websecure"
+    #         - "traefik.http.routers.web.tls.certresolver=letsencrypt"
+    #         - "traefik.http.routers.web.middlewares=secure-headers"
+    #         - "traefik.http.routers.web-secure-redirect.entrypoints=web"
+    #         - "traefik.http.routers.web-secure-redirect.rule=Host(`fastapi-traefik.prod-fastapi.ddns-ip.net`)"
+    #         - "traefik.http.routers.web-secure-redirect.middlewares=redirect-to-https"
+    #         - "traefik.http.services.web.loadbalancer.server.port=80"
+    #   EOF
+    # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build 
+    # # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
+    # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
+    # - docker ps -a
+    # - sleep 20
+    # - docker-compose restart traefik
+    # - docker-compose restart web
+    # - docker-compose restart db
+    # - sleep 20
+    # - docker-compose ps
+    # - docker-compose logs traefik
+    # - docker-compose logs db
+    # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml config > /tmp/merged.yml
+    # - cat /tmp/merged.yml
+    # - docker-compose logs traefik | grep acme
+    # - echo "Test FastAPI inside the container..."
+    # - docker-compose exec -T web curl -f http://web:80/ || (echo "Internal health check failed!" && exit 1)
+    # - docker-compose exec -it web curl -vk http://web:80/docs || (echo "Internal docs endpoint check failed!" && exit 1)
+    # - echo "Checking HTTPS..."
+    # - openssl s_client -connect fastapi-traefik.prod-fastapi.ip-ddns.com:443 -servername fastapi-traefik.prod-fastapi.ddns-ip.net | openssl x509 -noout -issuer -subject -dates
+    # - curl -vk http://fastapi-traefik.prod-fastapi.ddns-ip.net/.well-known/acme-challenge/test
+    # - curl -vk https://fastapi-traefik.prod-fastapi.ddns-ip.net/docs || (echo "HTTPS check failed!" && exit 1)
+    # - curl -vkI https://fastapi-traefik.prod-fastapi.ddns-ip.net/docs
+    # - curl -vk https://fastapi-traefik.prod-fastapi.ddns-ip.net 2>&1 | grep "issuer"
+    # - curl -vkI https://fastapi-traefik.prod-fastapi.ddns-ip.net
+    # - echo "HTTPS enabled and secure headers applied!"
   environment:
    name: Production
    url: https://fastapi-traefik.prod-fastapi.ddns-ip.net
