--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -142,13 +142,13 @@ deploy_prod:
 
 secure_prod:
   stage: deploy_prod
-  image: docker:latest
+  image: sarialbebeto/fastapi-prod:latest
   #tags: 
   #  - traefik-fastapi-project       # a shell runner to run this job
   before_script:
     - echo "Preparing Traefik certificate folder..."
     - mkdir -p $CI_PROJECT_DIR/traefik-public-certificates
-    - chown -R gitlab-runner:gitlab-runner $CI_PROJECT_DIR/traefik-public-certificates
+    - chown -R $(id -u):$(id -g) $CI_PROJECT_DIR/traefik-public-certificates
     - touch $CI_PROJECT_DIR/traefik-public-certificates/acme.json
     - chmod 700 $CI_PROJECT_DIR/traefik-public-certificates
     - chmod 600 $CI_PROJECT_DIR/traefik-public-certificates/acme.json
