--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -143,8 +143,8 @@ deploy_prod:
 secure_prod:
   stage: deploy_prod
   image: sarialbebeto/fastapi-prod:latest
-  tags: 
-    - traefik-fastapi-project       # a shell runner to run this job
+  # tags: 
+  #   - traefik-fastapi-project       # a shell runner to run this job
   before_script:
     - echo "Preparing Traefik certificate folder..."
     - mkdir -p $CI_PROJECT_DIR/traefik-public-certificates
@@ -154,6 +154,8 @@ secure_prod:
     - chmod 600 $CI_PROJECT_DIR/traefik-public-certificates/acme.json
   script:
     - echo "Installing dependencies"
+    - sudo apt install -y docker-compose docker.io
+    - sudo systemctl start docker
     - docker-compose -f docker-compose.prod.yml down
     - sudo apt-get update && sudo apt-get install -y bash curl coreutils ufw certbot
     - sudo certbot certonly --standalone -d fastapi-traefik.prod-fastapi.ddns-ip.net --non-interactive --agree-tos --email tsamosarial@yahoo.fr
