--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -21,8 +21,10 @@ deploy_prod:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
     - export KUBECONFIG=$KUBECONFIG_FILE
+    - mkdir -p $KUBECONFIG_FILE
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
+    - cp $KUBECONFIG $KUBECONFIG_FILE
     - sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
     - sudo ls -l $KUBECONFIG_FILE
 
@@ -109,4 +111,3 @@ deploy_prod:
   allow_failure: true
   only:
     - main
-  when: manual
