--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -24,7 +24,7 @@ deploy_prod:
     - mkdir -p $KUBECONFIG_FILE
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
-    - cp -r $KUBECONFIG $KUBECONFIG_FILE
+    - sudo cp -r $KUBECONFIG $KUBECONFIG_FILE
     - sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
     - sudo ls -l $KUBECONFIG_FILE
 
@@ -111,3 +111,4 @@ deploy_prod:
   allow_failure: true
   only:
     - main
+  when: manual
