--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,12 @@ stages:
  - deploy
  - deploy_aws
 
-# update:
-#   stage: update
-#   image: python:3.11
-#   script:
-#     - pip install --upgrade pip
-#     - pip install -r requirements.txt
-#   when: manual # just for testing purposes
+update:
+  stage: update
+  image: python:3.11
+  script:
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
 
 # build:
 #   stage: build
@@ -84,6 +83,7 @@ docker_pipeline:
   trigger:
     include: .gitlab-ci-docker.yml
     strategy: depend
+  when: manual
 
 k8s_pipeline_dev:
   stage: deploy
@@ -102,7 +102,7 @@ k8s_pipeline_prod:
     include: 
       - local: .gitlab-ci-k8s-prod.yml
     strategy: depend
- # when: manual
+  when: manual
 
 deploy_dev_aws:
   stage: deploy_aws
