--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -24,8 +24,9 @@ deploy_prod:
     - mkdir -p $KUBECONFIG_FILE
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
-    - sudo cp -r $KUBECONFIG $KUBECONFIG_FILE
-    - sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
+    #- sudo cp -r $KUBECONFIG $KUBECONFIG_FILE
+    #- sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
+    - sudo chown $(whoami):$(whoami) $KUBECONFIG_FILE
     - sudo ls -l $KUBECONFIG_FILE
 
     # Install dependencies
