--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -21,7 +21,7 @@ deploy_prod:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
     - export KUBECONFIG=$KUBECONFIG_FILE
-    - mkdir -p $KUBECONFIG_FILE
+    - touch $KUBECONFIG_FILE
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
     #- sudo cp -r $KUBECONFIG $KUBECONFIG_FILE
