ports errors fixed

--- a/helm/fastapi/templates/service.yaml
+++ b/helm/fastapi/templates/service.yaml
@@ -11,5 +11,6 @@ spec:
       targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
       name: http
+      # containerPort: {{ .values.containerPort}}
   selector:
     {{- include "fastapi.selectorLabels" . | nindent 4 }}
