--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.containerPort }}
               protocol: TCP
             # - name: containerport
             #   containerPort: {{ .Values.service.targetPort }}
