--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,7 @@
 FROM tiangolo/uvicorn-gunicorn:python3.11-slim
 
+USER root
+
 RUN apt-get update && apt-get install -y netcat-traditional
 
 RUN apt-get install -y postgresql-client && rm -rf /var/lib/apt/lists/*
