--- a/helm/fastapi/templates/db-statefulset.yaml
+++ b/helm/fastapi/templates/db-statefulset.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
         - name: postgres
           image: {{ .Values.db.image.repository }}:{{ .Values.db.image.tag }}
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{ .Values.db.image.pullPolicy | default "IfNotPresent" }}
           ports:
             - containerPort: {{ .Values.db.port }}
           envFrom:
@@ -53,3 +53,4 @@ spec:
         {{- if .Values.db.storage.storageClassName }}
         storageClassName: {{ .Values.db.storage.storageClassName }}
         {{- end }}
+        
