root user from Dockerfile removed

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM tiangolo/uvicorn-gunicorn:python3.11-slim
 
-USER root
+# USER root
 
 RUN apt-get update && apt-get install -y netcat-traditional
 
