--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: DATABASE_URL
+              value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ include "fastapi.fullname" . }}-db:{{ .Values.db.port }}/{{ .Values.db.database }}"
           ports:
             - name: http
               containerPort: {{ .Values.containerPort }}
