migrating db inside cluster

--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -13,28 +13,13 @@ variables:
   DB_PASSWORD: "traefikapi2025@"
 
 migrate_db:
-  image: python:3.11-slim
+  image: bitnami/kubectl:latest
   stage: migrate
-  before_script:
-    - pip uninstall -y pydantic
-    - pip install --upgrade pip
-    - pip install --user -r requirements.txt
-    - export PATH="$HOME/.local/bin:$PATH"
-    - export PYTHONPATH=.
-    # Wait for Postgres service to be ready in the production namespace
-    - |
-      for i in {1..20}; do
-        if getent hosts fastapi-prod-db > /dev/null; then
-          echo "Postgres service fastapi-prod-db is reachable"; break;
-        else
-          echo "Waiting for Postgres service fastapi-prod-db..."; sleep 3;
-        fi
-        if [ "$i" -eq 20 ]; then echo "Postgres service not reachable after 60s"; exit 1; fi
-      done
   script:
-    - alembic upgrade head
-  variables:
-    DATABASE_URL: "postgresql://fastapi_traefik_prod:fastapi_traefik_prod@fastapi-prod-db:5432/fastapi_traefik_prod"
+    - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n production
+    - kubectl wait --for=condition=complete --timeout=180s job/alembic-migrate -n production
+    - kubectl logs job/alembic-migrate -n production
+    - kubectl delete job alembic-migrate -n production
   only:
     - main
   tags:
