--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,16 @@ stages:
  - update
  - build
  - test
- - deploy_using_docker
- - deploy_kubernetes
- - deploy_aws
+ - deploy_with_docker
+ - deploy_with_kubernetes
+ - deploy_with_aws
 
 update:
   stage: update
   image: python:3.11
   script:
     - pip install --upgrade pip
-    - pip install -r requirements.txt
+#   - pip install -r requirements.txt
 
 # build:
 #   stage: build
@@ -79,14 +79,14 @@ update:
 #     - main
 
 docker_pipeline:
-  stage: deploy_using_docker
+  stage: deploy_with_docker
   trigger:
     include: .gitlab-ci-docker.yml
     strategy: depend
   when: manual
 
 k8s_pipeline_dev:
-  stage: deploy_kubernetes
+  stage: deploy_with_kubernetes
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev"'
   trigger:
@@ -95,7 +95,7 @@ k8s_pipeline_dev:
     strategy: depend
 
 k8s_pipeline_prod:
-  stage: deploy_kubernetes
+  stage: deploy_with_kubernetes
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
   trigger:
@@ -105,7 +105,7 @@ k8s_pipeline_prod:
   when: manual
 
 deploy_dev_aws:
-  stage: deploy_aws
+  stage: deploy_with_aws
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev"'
   trigger:
@@ -114,7 +114,7 @@ deploy_dev_aws:
     strategy: depend
 
 deploy_prod_aws:
-  stage: deploy_aws
+  stage: deploy_with_aws
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
   trigger:
