--- a/helm/fastapi/alembic-migrate-job.yaml
+++ b/helm/fastapi/alembic-migrate-job.yaml
@@ -12,6 +12,11 @@ spec:
           image: sarialbebeto/alembic-migrate:latest
           command: ["alembic", "upgrade", "head"]
           env:
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: fastapi-prod-db
+                  key: POSTGRES_PASSWORD
             - name: DATABASE_URL
-              value: "postgresql://fastapi_traefik_prod:fastapi_traefik_prod@fastapi-prod-db:5432/fastapi_traefik_prod"
+              value: "postgresql://fastapi_traefik_prod:$(DB_PASSWORD)@fastapi-prod-db:5432/fastapi_traefik_prod"
 
